@@ -143,8 +143,8 @@ public class InsertHandler extends AbstractHandler {
 			numStatements = ti.getInserter().getNumStatements();
 		}
 		catch(TrackableException e) {
-			if (e.getCause() instanceof ServletErrorResponseException) {
-				throw (ServletErrorResponseException)e.getCause();
+			if (e.getCause() instanceof ServletErrorResponseException servletEx) {
+				throw servletEx;
 			} else {
 				throw new ServletErrorResponseException(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, e,
 					"Error while running insert\n\n" + LogUtil.getExceptionInfo(e));
@@ -156,11 +156,8 @@ public class InsertHandler extends AbstractHandler {
 		String msg = "Insert operation successful.";
 		if (numStatements == 1) {
 			msg = "Insert operation successful.  1 statement added.";
-		}
-		else if (numStatements >= 0) {
-			msg = String.format(
-				"Insert operation successful.  %1$d statements added.",
-				numStatements);
+		} else if (numStatements >= 0) {
+			msg = "Insert operation successful.  %1$d statements added.".formatted(numStatements);
 		}
 		sendSuccess(msg, resp);
 	}
