@@ -12,6 +12,7 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.Iterator;
 import java.util.Properties;
 
@@ -108,10 +109,10 @@ public class PostgresIndex extends SQLGeometryIndex {
 		if (isClosed()) {
 			open();
 		}
-		try (Connection c = store.getConnection()) {
-			c.createStatement().execute(String.format(
+		try {
+			execute(
 				"DROP INDEX %1$s%2$s;DROP INDEX %1$s%3$s;DROP TABLE %1$s;",
-				tableName, GEOMETRY_INDEX_SUFFIX, NODE_INDEX_SUFFIX));
+				tableName, GEOMETRY_INDEX_SUFFIX, NODE_INDEX_SUFFIX);
 		} catch (PersistentStoreException | SQLException ex) {
 			throw new SpatialIndexException(this, ex);
 		}
@@ -119,46 +120,47 @@ public class PostgresIndex extends SQLGeometryIndex {
 	}
 
 	private void createPersistanceTable() throws SpatialIndexException {
-		try (Connection c = store.getConnection()) {
+		try (
+			Connection c = store.getConnection();
+			Statement stmt = c.createStatement();
+		) {
 			// check if spatial table exists
-			String sql1 = String.format(
-				"SELECT relname FROM pg_class WHERE relname = '%1$s'",
-				tableName);
-			try (ResultSet rs = c.createStatement().executeQuery(sql1)) {
+			String sql1 = "SELECT relname FROM pg_class WHERE relname = '%1$s'"
+				.formatted(tableName);
+			try (ResultSet rs = stmt.executeQuery(sql1)) {
 				if (!rs.next()) {
-					c.createStatement().execute(String.format(
-						"CREATE TABLE %1$s ( id SERIAL PRIMARY KEY, node VARCHAR(256) )",
-						tableName));
+					execute("CREATE TABLE %1$s ( id SERIAL PRIMARY KEY, node VARCHAR(256) )",
+						tableName);
 				}
 			}
 
 			// check if geometry column exists
-			String sql2 = String.format(""
-				+ "SELECT attname FROM pg_attribute, pg_type WHERE%n"
-				+ "typname = '%1$s' AND attrelid = typrelid AND attname NOT IN%n"
-				+ "('cmin', 'cmax', 'ctid', 'oid', 'tableoid', 'xmin', 'xmax');",
-				tableName);
+			String sql2 = """
+				SELECT attname FROM pg_attribute, pg_type WHERE
+					typname = '%1$s'
+					AND attrelid = typrelid
+					AND attname NOT IN ('cmin', 'cmax', 'ctid', 'oid', 'tableoid', 'xmin', 'xmax');
+				""".formatted(tableName);
 			int count = 0;
-			try (ResultSet rs = c.createStatement().executeQuery(sql2)) {
+			try (ResultSet rs = stmt.executeQuery(sql2)) {
 				while (rs.next()) {
 					++count;
 				}
 			}
 			if (count == 2) {
-				c.createStatement().execute(String.format(
-					"SELECT AddGeometryColumn('%1$s','%2$s',%3$d,'GEOMETRY',2)",
-					tableName, GEOMETRY_COLUMN, Constants.WGS84_SRID));
-				c.createStatement().execute(String.format(
-					"CREATE INDEX %1$s%2$s ON %1$s USING GIST ( %3$s)",
-					tableName, GEOMETRY_INDEX_SUFFIX, GEOMETRY_COLUMN));
+				execute("SELECT AddGeometryColumn('%1$s','%2$s',%3$d,'GEOMETRY',2)",
+					tableName, GEOMETRY_COLUMN, Constants.WGS84_SRID);
+				execute("CREATE INDEX %1$s%2$s ON %1$s USING GIST ( %3$s)",
+					tableName, GEOMETRY_INDEX_SUFFIX, GEOMETRY_COLUMN);
 			}
 
 			// check if node index exists
-			String sql3 = String.format(
-				"SELECT indexname from pg_indexes where tablename = '%1$s' AND indexname NOT IN ('%1$s', '%1$s_pkey')",
-				tableName);
+			String sql3 = """
+				SELECT indexname from pg_indexes WHERE tablename = '%1$s'
+					AND indexname NOT IN ('%1$s', '%1$s_pkey')
+				""".formatted(tableName);
 			boolean hasNodeIndex = false;
-			try (ResultSet rs = c.createStatement().executeQuery(sql3)) {
+			try (ResultSet rs = stmt.executeQuery(sql3)) {
 				while (rs.next()) {
 					String index = rs.getString("indexname");
 					if (index.equals(tableName + NODE_INDEX_SUFFIX)) {
@@ -167,9 +169,8 @@ public class PostgresIndex extends SQLGeometryIndex {
 				}
 			}
 			if (!hasNodeIndex) {
-				c.createStatement().execute(String.format(
-					"CREATE UNIQUE INDEX %1$s%2$s ON %1$s USING btree(node)",
-					tableName, NODE_INDEX_SUFFIX));
+				execute("CREATE UNIQUE INDEX %1$s%2$s ON %1$s USING btree(node)",
+					tableName, NODE_INDEX_SUFFIX);
 			}
 		} catch (PersistentStoreException | SQLException ex) {
 			throw new SpatialIndexException(this, ex);
@@ -180,7 +181,7 @@ public class PostgresIndex extends SQLGeometryIndex {
 	@Override
 	protected void indexClear() throws SpatialIndexException {
 		try (Connection c = store.getConnection()) {
-			c.createStatement().execute(String.format("DELETE FROM %1$s", tableName));
+			execute("DELETE FROM %1$s", tableName);
 		} catch (SQLException | PersistentStoreException ex) {
 			throw new SpatialIndexException(this, ex);
 		}
@@ -193,7 +194,7 @@ public class PostgresIndex extends SQLGeometryIndex {
 		String query = Operation.Helper.isIntersection(operation)
 			? Queries.SimpleFeatures.INTERSECTS
 			: Queries.SimpleFeatures.DISJOINT;
-		query = String.format(query, tableName, "?", GEOMETRY_COLUMN);
+		query = query.formatted(tableName, "?", GEOMETRY_COLUMN);
 
 		Connection c = null;
 		try {
@@ -224,9 +225,9 @@ public class PostgresIndex extends SQLGeometryIndex {
 
 		// add bounding box to geometry for faster bounding box
 		// queries/filters
-		String sql = String.format(
-			"INSERT INTO %1$s (%2$s, %3$s) VALUES (ST_AddBBOX(ST_SetSRID(?, ?)), ?)",
-			tableName, GEOMETRY_COLUMN, NODE_COLUMN);
+		String sql =
+			"INSERT INTO %1$s (%2$s, %3$s) VALUES (ST_AddBBOX(ST_SetSRID(?, ?)), ?)"
+			.formatted(tableName, GEOMETRY_COLUMN, NODE_COLUMN);
 		try (
 			Connection c = store.getConnection();
 			PreparedStatement ps = c.prepareStatement(sql);
@@ -247,8 +248,8 @@ public class PostgresIndex extends SQLGeometryIndex {
 		Geometry extent = r.getValue();
 		extent.setSRID(Constants.WGS84_SRID);
 
-		String sql = String.format("UPDATE %1$s SET %2$s = ST_AddBBOX(ST_SetSRID(?, ?)) WHERE %3$s = ?",
-			tableName, GEOMETRY_COLUMN, NODE_COLUMN);
+		String sql = "UPDATE %1$s SET %2$s = ST_AddBBOX(ST_SetSRID(?, ?)) WHERE %3$s = ?"
+			.formatted(tableName, GEOMETRY_COLUMN, NODE_COLUMN);
 		try (
 			Connection c = store.getConnection();
 			PreparedStatement ps = c.prepareStatement(sql);
@@ -270,8 +271,8 @@ public class PostgresIndex extends SQLGeometryIndex {
 		boolean removed = false;
 		try (
 			Connection c = store.getConnection();
-			PreparedStatement ps = c.prepareStatement(String.format(Queries.DELETE, tableName));
-			) {
+			PreparedStatement ps = c.prepareStatement(Queries.DELETE.formatted(tableName));
+		) {
 			ps.setString(1, GeometryConverter.getStringRepresentation(node));
 			ps.execute();
 			removed = true;
@@ -295,8 +296,8 @@ public class PostgresIndex extends SQLGeometryIndex {
 			return new ResultSetIterator(c, geometryToNode.executeQuery(), NODE_COLUMN, GEOMETRY_COLUMN);
 		} catch (SQLException | PersistentStoreException ex) {
 			PersistentStore.close(c);
-			String msg = String.format("Could not lookup nodes for: %1$s in table '%2$s'",
-				GeometryConverter.convertGeometry(value).toString(), tableName);
+			String msg = "Could not lookup nodes for: %1$s in table '%2$s'"
+				.formatted(GeometryConverter.convertGeometry(value), tableName);
 			throw new SpatialIndexException(this, msg, ex);
 		}
 	}
@@ -305,5 +306,15 @@ public class PostgresIndex extends SQLGeometryIndex {
 	protected long estimate(Geometry geometry, Operation operation) throws SpatialIndexException {
 		// TODO Auto-generated method stub
 		return 0;
+	}
+
+	private void execute(String statementFormat, Object... args)
+		throws PersistentStoreException, SQLException {
+		try (
+			Connection c = store.getConnection();
+			Statement stmt = c.createStatement();
+		) {
+			stmt.execute(statementFormat.formatted(args));
+		}
 	}
 }
